# Emergent-Specialization-in-Multi-Agent-Systems

./: .gitignore  ARXIV_SUBMISSION_GUIDE.md  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  ablation_3_4_log.txt  adaptive_lambda_log.txt  multi_asset_log.txt  pyproject.toml  real_data_log.txt  regime_sensitivity_log.txt  requirements.txt  rl_baselines_log.txt  run_all.sh  run_quick.sh  setup.py  tradeoff_log.txt
data/: README.md
data/air_quality/: epa_daily_aqi.csv  openmeteo_real_air_quality.csv
data/energy/: eia_hourly_demand.csv  hourly_demand.csv
data/traffic/: nyc_taxi_real_hourly.csv
docs/: WILD_IDEAS_NEXT_LEVEL_RESEARCH.md  conversation_v1.5.md
experiments/: README.md  __init__.py  benchmark_costs.py  config.py  diagnose_real_data.py  exp1_emergence.py  exp2_diversity_value.py  exp3_population_size.py  exp4_transfer_frequency.py  exp5_regime_transitions.py  exp6_real_data.py  exp_ablation.py  exp_adaptive_lambda.py  exp_all_domains.py  exp_cost_transition_v3.py  exp_distribution_matched_v3.py  exp_hypothesis_tests.py  exp_marl_comparison.py  exp_mechanism_ablation.py  exp_mechanistic_analysis.py  exp_method_specialization.py  exp_mono_regime_v3.py  exp_multi_domain.py  exp_out_of_sample.py  exp_real_data.py  exp_real_data_v2.py  exp_real_domains.py  exp_regime_sensitivity.py  exp_regime_statistics.py  exp_regime_stratified_v3.py  exp_rl_baselines.py  exp_rl_baselines_v2.py  exp_robustness.py  exp_tier1_screening.py  exp_tradeoff_analysis.py  exp_transaction_costs.py  exp_unified_prediction.py  exp_unified_prediction_v2.py  run_rigorous.py  runner.py
paper/: appendix_workflow_v2.tex  limitations.tex  main.tex  method_deep_dive.tex  neurips_template.tex  propositions.tex  references.bib
scripts/: download_cdc_fluview.py  download_eia_data.py  download_epa_air_quality.py  download_fred_commodities.py  download_noaa_weather.py  download_nrel_solar.py  download_real_data.py  download_usgs_water.py  download_wikipedia_pageviews.py  generate_figures_v2.py  generate_hypothesis_table.py  generate_neurips_figures.py  generate_real_data_figures.py
src/: __init__.py
tests/: __init__.py  test_core.py
(+76 files in other folders)
