[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-specialization"
version = "0.1.0"
description = "Emergent Specialization in Multi-Agent Trading - NeurIPS 2026"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Howard Yuhao Li", email = "howard.li@example.com"}
]
keywords = [
    "multi-agent-systems",
    "reinforcement-learning",
    "evolutionary-game-theory",
    "trading",
    "emergent-behavior"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimal dependencies - NO external APIs
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "pyyaml>=5.4.0",
    "scikit-learn>=1.0.0",  # For some baselines
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
finrl = [
    "finrl>=0.3.0",  # Optional: for FinRL baseline comparison
]

[project.urls]
Homepage = "https://github.com/HowardLiYH/MAS_For_Finance"
Documentation = "https://github.com/HowardLiYH/MAS_For_Finance/tree/main/emergent_specialization"
Repository = "https://github.com/HowardLiYH/MAS_For_Finance"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
